tests/snapshots/test_edit__adr_add_nested_path.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Add Test
Created ADR: gov/adr/ADR-XXXX-add-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option X
Added 'Option X' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Cheap
Added 'Cheap' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Reliable
Added 'Reliable' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr get ADR-0001 alternatives[0].pros
Cheap
Reliable
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].cons --add Slow
Added 'Slow' to ADR-0001.alternatives[0].cons
exit: 0

$ govctl adr get ADR-0001 alternatives[0].cons
Slow
exit: 0
