tests/snapshots/test_edit__adr_add_nested_path_rejects_indexed_terminal.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Indexed Add Test
Created ADR: gov/adr/ADR-XXXX-indexed-add-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option X
Added 'Option X' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Fast
Added 'Fast' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros[999] --add Ignored
error[E0817]: Path 'alternatives[0].pros[999]' does not support --add. Supported operations: --set, --remove (ADR-0001)
exit: 1
