tests/snapshots/test_edit__adr_add_ref.snap
---
source: tests/edit_tests/adr.rs
expression: value
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 refs --add RFC-0001
Added 'RFC-0001' to ADR-0001.refs
exit: 0

$ govctl adr get ADR-0001 refs
RFC-0001
exit: 0
