tests/snapshots/test_edit__adr_get_nested_path.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Path Test
Created ADR: gov/adr/ADR-XXXX-path-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Use traits
Added 'Use traits' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Flexible
Added 'Flexible' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Reusable
Added 'Reusable' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].cons --add Complex
Added 'Complex' to ADR-0001.alternatives[0].cons
exit: 0

$ govctl adr get ADR-0001 alternatives[0].text
Use traits
exit: 0

$ govctl adr get ADR-0001 alternatives[0].pros
Flexible
Reusable
exit: 0

$ govctl adr get ADR-0001 alternatives[0].pros[0]
Flexible
exit: 0

$ govctl adr get ADR-0001 alternatives[0].cons
Complex
exit: 0

$ govctl adr get ADR-0001 alternatives[0]
{"cons":["Complex"],"pros":["Flexible","Reusable"],"status":"considered","text":"Use traits"}
exit: 0
