tests/snapshots/test_edit__adr_get_nested_scalar_rejects_index.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Scalar Index Test
Created ADR: gov/adr/ADR-XXXX-scalar-index-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option X
Added 'Option X' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Fast
Added 'Fast' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr get ADR-0001 alternatives[0].text[0]
error[E0817]: Cannot index into non-list field 'text' at 'alternatives[0].text[0]' (ADR-0001)
exit: 1
