tests/snapshots/test_edit__adr_get_nonexistent.snap
---
source: tests/test_edit.rs
assertion_line: 655
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl adr get ADR-9999 title
error[E0302]: ADR not found: ADR-9999 (gov/adr)
exit: 1
