tests/snapshots/test_edit__adr_nested_path_rejects_extra_segments.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Depth Test
Created ADR: gov/adr/ADR-XXXX-depth-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option X
Added 'Option X' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Fast
Added 'Fast' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr get ADR-0001 alternatives[0].pros[0].oops
error[E0817]: Cannot descend into non-object path 'alternatives[0].pros[0].oops' (ADR-0001)
exit: 1
