tests/snapshots/test_edit__adr_remove_nested_path_requires_selector.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Selector Test
Created ADR: gov/adr/ADR-XXXX-selector-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Opt1
Added 'Opt1' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].cons --add Bad
Added 'Bad' to ADR-0001.alternatives[0].cons
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].cons --remove
error[E0801]: Remove from ADR-0001.alternatives[0].cons requires an indexed path, exact value, regex, or --all (ADR-0001)
exit: 1
