tests/snapshots/test_edit__adr_set_consequences.snap
---
source: tests/edit_tests/adr.rs
expression: value
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 consequences --set Faster reads, but more memory use.
Set ADR-0001.consequences = Faster reads, but more memory use.
exit: 0

$ govctl adr show ADR-0001
# ADR-0001: Test Decision

> **Status:** proposed | **Date:** <DATE>

## Context

Describe the context and problem statement.
What is the issue that we're seeing that is motivating this decision?

## Decision

Describe the decision that was made.
What is the change that we're proposing and/or doing?

## Consequences

Faster reads, but more memory use.
exit: 0
