tests/snapshots/test_edit__adr_set_context.snap
---
source: tests/edit_tests/adr.rs
expression: value
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 context --set New context for the decision
Set ADR-0001.context = New context for the decision
exit: 0

$ govctl adr show ADR-0001
# ADR-0001: Test Decision

> **Status:** proposed | **Date:** <DATE>

## Context

New context for the decision

## Decision

Describe the decision that was made.
What is the change that we're proposing and/or doing?

## Consequences

Describe the resulting context after applying the decision.
What becomes easier or more difficult to do because of this change?
exit: 0
